--- a/各种技术/数据结构/第二章 算法.md
+++ b/各种技术/数据结构/第二章 算法.md
@@ -22,5 +22,56 @@
 
 ### 算法时间复杂度
 
-判断一个算法的效率是，函数中的常数和其他次要项常常可以忽略，而更应该关注主项（最高阶项）的阶数。
+**时间频度**：一个算法花费的时间与算法中语句的执行次数成正比例，哪个算法中语句执行次数多，它花费时间就多。一个算法中的语句执行次数称为语句频度或时间频度。记为 T(n)。
 
+**定义**：一般情况下，算法中的基本操作语句的重复执行次数是问题规模 n 的某个函数，用 T(n)表示，若有某个辅助函数 f(n)，使得当 n 趋近于无穷大时，T(n) / f(n) 的极限值为不等于零的常数，则称 f(n)是 T(n)的同数量级函数。记作 T(n)=Ｏ( f(n) )，称Ｏ( f(n) ) 为算法的渐进时间复杂度，简称时间复杂度。
+
+> 1. 只关注循环次数最多的一段代码
+> 2. 加法法则，总复杂度等于量级最大的那段代码的复杂度
+> 3. 乘法法则，嵌套代码的复杂度等于嵌套内外代码复杂度的乘积
+
+- 常量阶 O(1)
+  常量级时间复杂度的表示方法，并不是只有一行代码 ，即便是有三行 diam ，时间复杂度也是O(1)
+  一般情况下，算法中只要不出现循环语句，递归语句，即时有成千上万行代码，时间复杂度也是O(1)
+
+  例如：加减乘除、赋值、取余、分支结构
+
+- 对数阶 O(logn)
+  不管是以 2 为底，还是以 3 为底，或者以 10 为底，我们把所有对数阶的时间复杂度记为O(logn)
+  因为以 3 为底 n 的对数 =以 3 为底 2 的对数*以 2 为底 n 的对数，以 3 为底 2 的对数是一个常量，根据大 O 表示法，系数可以忽略，所以以 3 为底 n 的对数等于以 2 为底 n 的对数 而在对数的时间复杂度表示法中，我们通常忽略对数的底，故统一表示为O(logn)
+
+  例如：二分查找
+
+- 线性对数阶 O(nlogn)
+  如果一段代码的时间复杂度是O(logn),而这段代码又执行了 n 次，那么根据乘法法则，那么这段代码的时间复杂度就是O(nlogn)，是一种常用的算法时间复杂度，如归并，快排，时间复杂度都是O(nlogn)
+
+- 线性阶 O(n)  
+
+  例如：循环结构
+
+- 平方阶 O(n^2), 立方阶 O(n^3)… K次方阶 O(n^k)
+
+  例如：双重循环
+
+- O(n+m),O(n*m) 由两个数据规模决定的
+
+  ### 所消耗的时间从大到小
+  
+  $$
+  O(1) < O(logn) < O(n) < O(nlogn) < O(n^2) < O(n^3) < O(n!) < O(n^n)
+  $$
+  
+  
+  
+  #### 时间复杂度的几条计算规则
+  
+  1. 基本操作，即只有常数项，认为其时间复杂度为O(1)
+  2. 顺序结构，时间复杂度按加法计算
+  3. 循环结构，时间复杂度按乘法计算
+  4. 分支结构，时间复杂度取最大值
+  5. 判断一个算法的效率时，往往只需要关注操作数量的最高次项，其他次要项可以忽略
+  6. 在没有特殊说明时，我们所分析的算法的时间复杂度都是指最坏时间复杂度
+  
+  ### 空间复杂度
+  
+  算法的空间复杂度通过计算算法所需的存储空间实现，算法的空间复杂度公式记作 S(n)=O(f(n))，其中，**n**为问题的规模，f(n)为语句关于n所占存储空间的函数。
