--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -128,6 +128,10 @@
 
   推荐软件： Typora
 
+- OneDrive
+
+  微软office 提供的文件云同步工具，当有多台电脑+iPad时，OneDrive配合Typora写笔记，即时同步到各台设备，爽歪歪了简直。
+
 - 360卫士
 
   被很多人鄙视的电脑管家，其实很有用，比如在功能大全中添加弹窗过滤，启动强力模式，可以把各种软件的弹窗全部屏蔽。
