--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -8,6 +8,10 @@
   
     一款优秀的文本编辑器，简单小巧
 
+  插件 
+  
+  文件对比  compare 、 json 格式化 json view 
+  
 - java 
   
     安装在 D:\software\java 下，以后这个java目录中会安装好多个版本的java
@@ -37,6 +41,10 @@
   0.0.0.0 account.jetbrains.com
   0.0.0.0 www.jetbrains.com
   ```
+
+  插件：
+
+  **Mybatis-log-plugin** 直接从dao.java 到对应的xml
 
 - everything  
 
@@ -72,10 +80,10 @@
   
   最简单的方法：通过docker 安装mysql 
   
-  docker pull mysql 
-  
-  docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
-  
+  > docker pull mysql 
+  >
+  > docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
+  >
   
 - mysql 连接工具
 
