--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -8,9 +8,10 @@
   
     一款优秀的文本编辑器，简单小巧
 
-  插件 
+  推荐插件：
   
-  文件对比  compare 、 json 格式化 json view 
+  - json viewer： json 格式化
+  - compare： 文件对比
   
 - java 
   
@@ -19,6 +20,8 @@
     我的是：
     ![G0PdOA.png](https://s1.ax1x.com/2020/04/04/G0PdOA.png)
 
+  推荐下载地址：[jdk 华为镜像](https://mirrors.huaweicloud.com/java/jdk/)
+  
 - idea 
 
   java代码编辑工具
@@ -42,17 +45,13 @@
   0.0.0.0 www.jetbrains.com
   ```
 
-  插件：
-
-  **Mybatis-log-plugin** 直接从dao.java 到对应的xml
-
 - everything  
 
   一款可以快速搜索电脑内所有文件的神器
 
 - git 
 
-  文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
+  e文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
 
   git  及 git 工具 sourcetree安装见文档：安装git  、sourcetree 安装包免注册安装及使用
   链接：http://note.youdao.com/noteshare?id=aa58ece79570fdcd960053d57fe47e5d&sub=CD86EE99FD4D40C6B3C4293025F3D0BE
@@ -77,17 +76,12 @@
 - mysql  
 
   数据库，官网下载即可，教程网上搜 菜鸟教程 
-  
-  最简单的方法：通过docker 安装mysql 
-  
-  > docker pull mysql 
-  >
-  > docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
-  >
-  
-- mysql 连接工具
 
-  开源的有 HeidiSQL、 dbeaver （推荐使用，可以连接很多种数据库）
+  mysql 连接工具
+
+  免费的 有 HeidiSQL、dbeaver
+
+  收费的有 sqlyog
 
 ## 好用的工具
 
@@ -141,7 +135,7 @@
 
   markdown是一种轻量级标记语言，它允许人们使用易读易写的纯文本格式编写文档
 
-  推荐软件： Typora
+  推荐编辑工具： Typora
 
 - OneDrive
 
@@ -150,3 +144,11 @@
 - 360卫士
 
   被很多人鄙视的电脑管家，其实很有用，比如在功能大全中添加弹窗过滤，启动强力模式，可以把各种软件的弹窗全部屏蔽。
+
+- Ditto 
+
+  剪切板工具，可以记录剪切板历史
+
+- dbeaver
+
+  数据库连接工具，支持主流的数据库，如mysql、oracle、db2、sqlserver等等
