--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -51,7 +51,7 @@
 
 - git 
 
-  e文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
+  文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
 
   git  及 git 工具 sourcetree安装见文档：安装git  、sourcetree 安装包免注册安装及使用
   链接：http://note.youdao.com/noteshare?id=aa58ece79570fdcd960053d57fe47e5d&sub=CD86EE99FD4D40C6B3C4293025F3D0BE
@@ -76,6 +76,13 @@
 - mysql  
 
   数据库，官网下载即可，教程网上搜 菜鸟教程 
+
+  最简单的安装方法：通过docker 安装mysql 
+
+    > docker pull mysql 
+    >
+    > docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
+    >
 
   mysql 连接工具
 
