--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -1,6 +1,6 @@
 电脑分为两个盘，C盘为ssd,D盘为机械硬盘
 
-如果软件安装时能选择安装目录，一律安装在 D:\software 下，不要安装在D:\Program Files下,因为此路径中有空格，某些软件安装会报错。
+如果软件安装时能选择安装目录，一律安装在 D:\software 下，不要安装在D:\Program Files下,因为此路径中有空格，某些软件（比如scala）安装会报错。
 
 ## 重要软件
 
@@ -159,3 +159,7 @@
 - dbeaver
 
   数据库连接工具，支持主流的数据库，如mysql、oracle、db2、sqlserver等等
+
+-  截图工具
+
+  snipaste、微信或qq自带的截图
