--- a/各种技术/软件推荐及其安装.md
+++ b/各种技术/软件推荐及其安装.md
@@ -2,164 +2,187 @@
 
 如果软件安装时能选择安装目录，一律安装在 D:\software 下，不要安装在D:\Program Files下,因为此路径中有空格，某些软件（比如scala）安装会报错。
 
-## 重要软件
+## 开发软件
 
-- Notepad++
-  
-    一款优秀的文本编辑器，简单小巧
+### Notepad++
 
-  推荐插件：
-  
-  - json viewer： json 格式化
-  - compare： 文件对比
-  
-- java 
-  
-    安装在 D:\software\java 下，以后这个java目录中会安装好多个版本的java
+一款优秀的文本编辑器，简单小巧
 
-    我的是：
-    ![G0PdOA.png](https://s1.ax1x.com/2020/04/04/G0PdOA.png)
+推荐插件：
 
-  推荐下载地址：[jdk 华为镜像](https://mirrors.huaweicloud.com/java/jdk/)
-  
-- idea 
+- json viewer： json 格式化
+- compare： 文件对比
 
-  java代码编辑工具
 
-  最新下载：https://www.jetbrains.com/idea/download/
+### java 
 
-  2019.1版本  ： https://share.weiyun.com/5enVmUr
+安装在 D:\software\java 下，以后这个java目录中会安装好多个版本的java
 
-  2019.3以下版本破解：
+推荐下载地址：[jdk 华为镜像](https://mirrors.huaweicloud.com/java/jdk/)
 
-  -  直接下载文件： https://share.weiyun.com/5iLrOvi
+### idea 
 
-    或
+java代码编辑工具
 
-  -  破解教程https://zhile.io/2018/08/25/jetbrains-license-server-crack.html
+最新下载：https://www.jetbrains.com/idea/download/
 
-  安装idea前需要修改 C:\Windows\System32\drivers\etc\hosts 屏蔽官网的验证，使用notepad打开 ，文件最后添加
+2019.1版本  ： https://share.weiyun.com/5enVmUr
 
-  ```
-  0.0.0.0 account.jetbrains.com
-  0.0.0.0 www.jetbrains.com
-  ```
+2019.3以下版本破解：
 
-- everything  
+-  直接下载文件： https://share.weiyun.com/5iLrOvi
 
-  一款可以快速搜索电脑内所有文件的神器
+  或
 
-- git 
+-  破解教程https://zhile.io/2018/08/25/jetbrains-license-server-crack.html
 
-  文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
+安装idea前需要修改 C:\Windows\System32\drivers\etc\hosts 屏蔽官网的验证，使用notepad打开 ，文件最后添加
 
-  git  及 git 工具 sourcetree安装见文档：安装git  、sourcetree 安装包免注册安装及使用
-  链接：http://note.youdao.com/noteshare?id=aa58ece79570fdcd960053d57fe47e5d&sub=CD86EE99FD4D40C6B3C4293025F3D0BE
+```
+0.0.0.0 account.jetbrains.com
+0.0.0.0 www.jetbrains.com
+```
 
-- maven 
+### git 
 
-  java 管理工具，maven项目需要配置它。
+文件版本控制工具，可以查看历史提交记录，每次提交有什么修改
 
-  - 安装后修改  apache-maven-3.2.3\conf\settings.xml ，删除146行<mirrors></mirrors>里面的内容，添加
+git  及 git 工具 sourcetree安装见文档：安装git  、sourcetree 安装包免注册安装及使用
+链接：http://note.youdao.com/noteshare?id=aa58ece79570fdcd960053d57fe47e5d&sub=CD86EE99FD4D40C6B3C4293025F3D0BE
 
-  ```
-  	 <mirror>
-  		<id>alimaven</id>
-  		<name>aliyun maven</name>
-  		<mirrorOf>central</mirrorOf>
-  		<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-  	</mirror>	
-  ```
+### maven 
 
-  链接：https://share.weiyun.com/5iNjc5P
+jar包 管理工具，maven项目需要配置它。
 
-- mysql  
+- 安装后修改  apache-maven-3.2.3\conf\settings.xml ，删除146行<mirrors></mirrors>里面的内容，添加阿里源加速
 
-  数据库，官网下载即可，教程网上搜 菜鸟教程 
+```
+	 <mirror>
+		<id>alimaven</id>
+		<name>aliyun maven</name>
+		<mirrorOf>central</mirrorOf>
+		<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+	</mirror>	
+```
 
-  最简单的安装方法：通过docker 安装mysql 
+链接：https://share.weiyun.com/5iNjc5P
 
-    > docker pull mysql 
-    >
-    > docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
-    >
+### mysql  
 
-  mysql 连接工具
+数据库，官网下载即可，教程网上搜 菜鸟教程 
 
-  免费的 有 HeidiSQL、dbeaver
+最简单的安装方法：通过docker 安装mysql 
 
-  收费的有 sqlyog
+  > docker pull mysql 
+  >
+  > docker run -itd --name mysql-test -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql  
 
-## 好用的工具
+mysql 连接工具
 
-- teamviewer 
+免费的 有 HeidiSQL、dbeaver
 
-  远程连接工具，可以控制别人的电脑
+收费的有 sqlyog
 
-- 福昕PDF阅读器
+### dbeaver
 
-- picase
+数据库连接工具，支持主流的数据库，如mysql、oracle、db2、sqlserver等等
 
-  看图软件，免费，小巧好用，链接：https://share.weiyun.com/5kFJkFu
+### xshell 
 
-- bandzip 
+linux 连接工具，破解方法见压缩包。
 
-  韩国人开发的一款解压缩工具，直接在官网下载即可，下载速度很快
+链接： https://share.weiyun.com/5aEACVQ
 
-- TIM
+安装后有好几个工具，我们最常用的是xshell
 
-  QQ 的干净版，没有各种弹窗广告
+### nosqlbootster4mongo
 
-- xshell 
+mongoDB 连接工具
 
-  linux 连接工具，破解方法见压缩包。
+链接：https://share.weiyun.com/5pDRIfq
 
-  链接： https://share.weiyun.com/5aEACVQ
+## 办公工具
 
-  安装后有好几个工具，我们最常用的是xshell
+### 文件检索
 
-- nosqlbootster4mongo
+everything  一款可以快速搜索电脑内所有文件的神器
 
-  mongoDB 连接工具
+### 远程连接工具
 
-  链接：https://share.weiyun.com/5pDRIfq
+​	teamviewer ，可以远程控制电脑。QQ有同样的功能，但是没有teamviewer好用
 
-- 浏览器
+### PDF阅读器  
 
-  一般程序员都用 chrome 浏览器
+福昕PDFpdf 阅读，官网下载即可
 
-- utools
+### picase
 
-  一款功能丰富的工具集
+​	看图软件，免费，小巧好用，链接：https://share.weiyun.com/5kFJkFu
 
-  链接：https://www.u.tools/
+### bandzip 
 
-- 有道云笔记
+​	韩国人开发的一款解压缩工具，直接在官网下载即可，下载速度很快
 
-  在线笔记类工具，可以很方便的笔记，并上传网上。
+### TIM
 
-- markdown 
+​	QQ 的干净版，没有各种弹窗广告
 
-  markdown是一种轻量级标记语言，它允许人们使用易读易写的纯文本格式编写文档
+### 浏览器
 
-  推荐编辑工具： Typora
+一般程序员都用 chrome 浏览器，最近Edge 也不错
 
-- OneDrive
+### utools
 
-  微软office 提供的文件云同步工具，当有多台电脑+iPad时，OneDrive配合Typora写笔记，即时同步到各台设备，爽歪歪了简直。
+一款功能丰富的工具集
 
-- 360卫士
+链接：https://www.u.tools/
 
-  被很多人鄙视的电脑管家，其实很有用，比如在功能大全中添加弹窗过滤，启动强力模式，可以把各种软件的弹窗全部屏蔽。
+### 有道云笔记
 
-- Ditto 
+在线笔记类工具，可以很方便的笔记，并上传网上。
 
-  剪切板工具，可以记录剪切板历史
+### markdown 
 
-- dbeaver
+markdown是一种轻量级标记语言，它允许人们使用易读易写的纯文本格式编写文档
 
-  数据库连接工具，支持主流的数据库，如mysql、oracle、db2、sqlserver等等
+推荐编辑工具： Typora
 
--  截图工具
+### OneDrive
 
-  snipaste、微信或qq自带的截图
+微软office 提供的文件云同步工具，当有多台电脑+iPad时，OneDrive配合Typora写笔记，即时同步到各台设备，爽歪歪了简直。
+
+### 360卫士或火绒
+
+360是被很多人鄙视的电脑管家，其实很有用，比如在功能大全中添加弹窗过滤，启动强力模式，可以把各种软件的弹窗全部屏蔽。
+
+火绒也不错，功能不花哨，够用
+
+### Ditto 
+
+剪切板工具，可以记录剪切板历史
+
+### 截图工具 
+
+snipaste、微信或qq自带的截图
+
+## 浏览器在线工具
+
+### PDF转Word转换器在线 - 免费将PDF转换成Docx - 加加PDF
+
+https://www.addpdf.cn/
+
+### Unix时间戳(Unix timestamp)转换工具 - 站长工具
+
+http://tool.chinaz.com/Tools/unixtime.aspx
+
+### 在线Cron表达式生成器
+
+http://cron.qqe2.com/
+
+### ProcessOn - 画流程图
+
+https://www.processon.com/
+
+### Iconfont-阿里巴巴矢量图标库
+
+http://www.iconfont.cn/home/index?spm=a313x.7781069.1998910419.2
